--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "script.js",
   "scripts": {
-    "start": "sass --watch scss/styles.scss style_cmd.css"
+    "start": "sass --watch scss/styles.scss style.css"
   },
   "author": "",
   "license": "ISC",
